--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,17 @@
 </head>
 <body class="bg-gray-800">
 
-
-<h1 class="text-4xl font-bold text-gray-300 text-center">Bader's Portfolio</h1>
-<img src="photo/Me.jpg" alt="Me" class="scale-50 rounded-lg bg-auto bg-left transition duration-300 ease-in-out hover:scale-75">
-<div class="text-gray-300 font-medium text-center">I am Bader Almutairi</div>
-<div class="text-gray-300 font-medium text-center">And I'm a Software Developer</div>
+<div class = text-gray-300>
+<h1 class="text-6xl font-bold text-center">Bader's Portfolio</h1>
+    <div class="">
+        <img src="photo/Me.jpg" alt="Me" class="h-1/2 w-1/2 p-10 rounded-md transition duration-300 ease-in-out hover:scale-75">
+        <div class="text-xl align-text-top text-center font-medium">I am Bader Almutairi</div>
+        <div class="text-xl align-text-top text-center  font-medium">And I'm a Software Developer</div>
+    <div>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-200">
+<div class="pt-16 text-left text-2xl p-5 ">Hello, and welcome to my website. I am a new up and comer in software development with a passion for learning. When I was a kid, I always had a love interest to electronics and I knew when I grew older that this was the passion for me</div>
+<svg class=" h-10 w-10 fill-current" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="800" height="800" viewBox="0 0 512 512"><path d="M506.372 243.686V57.558c0-22.727-18.49-41.216-41.216-41.216H41.216C18.49 16.342 0 34.831 0 57.558v286.901c0 22.727 18.49 41.216 41.216 41.216h145.477l-18.105 74.655h-22.365c-9.755 0-17.664 7.909-17.664 17.664s7.909 17.664 17.664 17.664l336.336-.005c16.233 0 29.44-13.207 29.44-29.44V261.05c.001-6.4-2.02-12.432-5.627-17.364zM204.941 460.33l18.103-74.652h60.282l18.103 74.652h-96.488zm125.767-51.434v22.264l-11.031-45.485h11.031v23.221zm0-58.549H41.216a5.894 5.894 0 0 1-5.888-5.888v-29.352h295.38v35.24zm0-89.298v18.73H35.328V57.558a5.896 5.896 0 0 1 5.888-5.888h423.94a5.894 5.894 0 0 1 5.888 5.888v174.051H360.148c-16.233 0-29.44 13.207-29.44 29.44zm35.328 54.058H476.67v80.769H366.036v-80.769zm110.636 145.217H366.036v-29.12h110.635v29.12zm0-180.544H366.036v-12.842h110.635v12.842z"/><circle cx="421.349" cy="445.772" r="10.226"/></svg>
+</div>
 
 
 
